--- a/depositor/single deposit/index.html
+++ b/depositor/single deposit/index.html
@@ -34,7 +34,7 @@
                                 <input type="tel" minlength="10" maxlength="10" class="form-control" placeholder="Input Account Number">
                               </div>
                             </div>
-                          </form>
+                        </form>
                           <a href="#" class="btn btn-primary btn-sm disabled" tabindex="-1" role="button" aria-disabled="true">Enter</a>
                     </div>
                 </div>
@@ -53,6 +53,10 @@
                 </div>
             </div>
         </div>
+        <div>
+
+        </div>
+
 
         <div class="row details">
             <div class="col-6">
@@ -66,7 +70,7 @@
                         <input class="form-control form-control-sm" type="text" placeholder="Depositor's Name">
                         <input class="form-control form-control-sm" type="tel" placeholder="Depositor's Phone Number">
                         <input class="form-control form-control-sm" type="text" placeholder="Narration">
-                        <a href="#" class="btn btn-primary btn-sm disabled" tabindex="-1" role="button" aria-disabled="true">Proceed</a>
+                        <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/depositor/single%20deposit/index2.html"> <button type="button" class="btn btn-outline-primary btn-sm disabled" tabindex="-1" role="button" aria-disabled="true">Proceed</a>
                     </div>
                 </div>
             </div>
