--- a/home/home.html
+++ b/home/home.html
@@ -13,7 +13,7 @@
                 <h1> Sterling Self-Deposit App</h1>
             </div>
             <div class="col-2">
-            <img class="logo" src="../images/sterling logo.jpeg">
+            <img class="logo img-responsive" src="../images/sterling logo.jpeg">
             </div>   
         </div>
         <div class="row">
@@ -22,7 +22,7 @@
         
         <div class="sign-in" >
            <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/depositor/single%20deposit/index.html"> <button type="button" class="btn btn-outline-primary btn-lg btn-lg"> <b>Depositor</b></button></a>
-           <a href="https://www.facebook.com/"> <button type="button" class="btn btn-outline-primary btn-lg btn-lg"> <b>Evacuator </b></button></a>
+           <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/evacuator/home.html"> <button type="button" class="btn btn-outline-primary btn-lg btn-lg"> <b>Evacuator </b></button></a>
         </div>
     </div>
 
