--- a/depositor/single deposit/single_dep3.html
+++ b/depositor/single deposit/single_dep3.html
@@ -10,28 +10,25 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-10">
-                <h1> Kindly proceed below as appropriate </h1>
+            <div class="col-1">
+            <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/index.html"> <img class="index" src="../../images/home.png" alt=""> </a> 
             </div>
-            <div class="col-2">
+            <div class="col-10">
+            <h1>Kindly proceed below as appropriate </h1>
+            </div>
+            <div class="col-1">
             <img class="logo" src="../../images/sterling logo.jpeg ">
-            </div>   
-        </div>
-        <div class="row">   
-                    <button type="button" class="btn btn-secondary btn-lg btn-block">Single Deposit </button>
-        </div>
+            </div>
     </div>
     <div class="container">
         <div class="row">
             <div class="alert alert-secondary analysis" role="alert">
                 <h4 class="alert-heading"> Cash Analysis  </h4>
-                <hr>
-                <input class="form-control form-control-lg" type="number" placeholder="Amount in Figures">
+                <small id="notesanalysis" class="form-text text-primary"><b>Total Deposit Amount</b></small>
             </div>
         </div>
-
-
-
+    </div>   
+    
     </div>
      
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
