--- a/depositor/single deposit/single_dep1.html
+++ b/depositor/single deposit/single_dep1.html
@@ -10,10 +10,13 @@
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-10">
-                <h1> Kindly proceed below as appropriate </h1>
+            <div class="col-1">
+                <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/index.html"> <img class="index" src="../../images/home.png" alt=""> </a> 
             </div>
-            <div class="col-2">
+            <div class="col-10">
+             <h1>Kindly proceed below as appropriate </h1>
+            </div>
+            <div class="col-1">
             <img class="logo" src="../../images/sterling logo.jpeg ">
             </div>   
         </div>
@@ -35,7 +38,7 @@
                               </div>
                             </div>
                         </form>
-                          <a href="#" class="btn btn-primary btn-sm disabled" tabindex="-1" role="button" aria-disabled="true">Enter</a>
+                        <a class="btn btn-primary btn-sm" href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/depositor/single%20deposit/single_dep1_ext.html" role="button">Enter</a>
                     </div>
                 </div>
             </div>
@@ -53,32 +56,7 @@
                 </div>
             </div>
         </div>
-        <div>
-
-        </div>
-
-
-        <div class="row details">
-            <div class="col-6">
-                <p>
-                    <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    Details Confirmed
-                    </button>
-                </p>
-                <div class="collapse" id="collapseExample">
-                    <div class="card card-body">
-                        <input class="form-control form-control-sm" type="text" placeholder="Depositor's Name">
-                        <input class="form-control form-control-sm" type="tel" placeholder="Depositor's Phone Number">
-                        <input class="form-control form-control-sm" type="text" placeholder="Narration">
-                        <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/depositor/single%20deposit/index2.html"> <button type="button" class="btn btn-outline-primary btn-sm disabled" tabindex="-1" role="button" aria-disabled="true">Proceed</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
     </div>
-
-
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
