--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="index.css">
 </head>
     <div class="container">
         <div class="row">
@@ -13,7 +13,7 @@
                 <h1> Sterling Self-Deposit App</h1>
             </div>
             <div class="col-2">
-            <img class="logo img-responsive" src="../images/sterling logo.jpeg">
+            <img class="logo img-responsive" src="images/sterling logo.jpeg">
             </div>   
         </div>
         <div class="row">
@@ -21,8 +21,8 @@
         </div>
         
         <div class="sign-in" >
-           <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/depositor/single%20deposit/index.html"> <button type="button" class="btn btn-outline-primary btn-lg btn-lg"> <b>Depositor</b></button></a>
-           <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/evacuator/home.html"> <button type="button" class="btn btn-outline-primary btn-lg btn-lg"> <b>Evacuator </b></button></a>
+           <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/depositor/single%20deposit/single_dep1.html"> <button type="button" class="btn btn-outline-primary btn-lg btn-lg"> <b>Depositor</b></button></a>
+           <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/evacuator/evacuator.html"> <button type="button" class="btn btn-outline-primary btn-lg btn-lg"> <b>Evacuator </b></button></a>
         </div>
     </div>
 
