--- a/depositor/single deposit/single_dep4.html
+++ b/depositor/single deposit/single_dep4.html
@@ -42,17 +42,10 @@
             </div>
         </div>
              <br>
-            <p>
-                <div class="form-group form-check">
-                <button class="btn btn-info btn-info btn-block" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                Click and Start Loading counting machine with #1000 notes only
-                </button>
-            </p>
-        <div class="collapse" id="collapseExample">
-            <div class="card card-body">
+        <div class="container">
                 <div class="row">
                     <div class="col-4">
-                        <h3 class="text">#1,000 notes counting ...</h3>
+                        <h3 class="text">#1,000 notes counted</h3>
                     </div>
                     <div class="col-4">
                         <button type="button" class="btn btn-outline-secondary btn-block" disabled> <b> Number of notes counted</b></button>
@@ -61,16 +54,38 @@
                         <button type="button" class="btn btn-outline-secondary btn-block" disabled> <b> Amount</b></button>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-6">
-                        <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/depositor/single%20deposit/single_dep4.html"> <button type="button" class="btn btn-outline-primary btn-block disabled" tabindex="-1" role="button" aria-disabled="true">Proceed</a>
-                    </div>
-                    <div class="col-6">
-                        <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/depositor/single%20deposit/single_dep4.html"> <button type="button" class="btn btn-outline-primary btn-block disabled" tabindex="-1" role="button" aria-disabled="true">Skip</a>
-                    </div> 
-                </div>
             </div>
         </div>
+            <br>
+        <p>
+            <div class="form-group form-check">
+            <button class="btn btn-info btn-info btn-block" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+            Click and Start Loading counting machine with #500 notes only
+            </button>
+        </p>
+    <div class="collapse" id="collapseExample">
+        <div class="card card-body">
+            <div class="row">
+                <div class="col-4">
+                    <h3 class="text">#500 notes counting ...</h3>
+                </div>
+                <div class="col-4">
+                    <button type="button" class="btn btn-outline-secondary btn-block" disabled> <b> Number of notes counted</b></button>
+                </div> 
+                <div class="col-4">
+                    <button type="button" class="btn btn-outline-secondary btn-block" disabled> <b> Amount</b></button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6">
+                    <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/depositor/single%20deposit/single_dep4_ext.html"> <button type="button" class="btn btn-outline-primary btn-block disabled" tabindex="-1" role="button" aria-disabled="true">Proceed</a>
+                </div>
+                <div class="col-6">
+                    <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/depositor/single%20deposit/single_dep4_ext.html"> <button type="button" class="btn btn-outline-primary btn-block disabled" tabindex="-1" role="button" aria-disabled="true">Skip</a>
+                </div> 
+            </div>
+        </div>
+    </div>
         
 
        
