--- a/evacuator/evacuator.html
+++ b/evacuator/evacuator.html
@@ -26,17 +26,8 @@
             <div class="form-group">
               <label for="exampleDropdownFormPassword2"><b> MToken</b></label>
               <input type="number" class="form-control" id="exampleDropdownFormPassword2" placeholder="Mtoken">
-            </div>
-            <div class="form-group">
-              <div class="form-check">
-                  <input type="checkbox" class="form-check-input" id="dropdownCheck2">
-                  <label class="form-check-label" for="dropdownCheck2">
-                    <b> Save details</b>
-                  </label>
-              </div>
-            </div>
-                  <a class="dropdown-item" href="#"><b> Forgot password?</b></a>
-                  <button type="submit" class="btn btn-primary">Sign in</button>
+            </div class="row">
+                  <a class="btn btn-primary" href="C:\Users\HP USER\Desktop\osiaye\subb\self-deposit app\evacuator\evacuator1.html" role="button">Sign In </a>
           </div>
         </div>
       </div>
