--- a/depositor/single deposit/single_dep2.html
+++ b/depositor/single deposit/single_dep2.html
@@ -66,7 +66,7 @@
         </div>
         <div class="row">
             <div class="col-6">
-                <a href="file:///C:/Users/HP%20USER/Desktop/osiaye/subb/self-deposit%20app/depositor/single%20deposit/single_dep3.html" class="btn btn-primary btn-block active" role="button" aria-pressed="true">Proceed</a>
+                <a href="C:\Users\HP USER\Desktop\osiaye\subb\self-deposit app\depositor\single deposit\single_dep5.html" class="btn btn-primary btn-block active" role="button" aria-pressed="true">Proceed</a>
             </div>
         </div>
     </div>
