--- a/depositor/single deposit/single_dep5.html
+++ b/depositor/single deposit/single_dep5.html
@@ -72,7 +72,7 @@
                 </button>
               </div>
               <div class="modal-body">
-                Your Transaction is being processed 
+                Your Transaction is being processed with i.d <b>ACLK3322445523</b> 
                 You would receive an alert shortly
               </div>
               <div class="modal-footer">
